--- a/package.json
+++ b/package.json
@@ -1,5 +1,16 @@
 {
+  "name": "adopet",
+  "version": "0.0.0",
+  "description": "", 
+  "type": "module",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.3.1"
+    "bcrypt": "^5.1.1",
+    "jump.js": "^1.0.2"
   }
 }
